test/ui/test/parsing/lambda-thin-arrow.stderr
error[E010]: found ‘->’ but expected parameter, ‘:’ or ‘=>’
  ┌─ ${TEST_FOLDER}/parsing/lambda-thin-arrow.lushui:1:30
  │
1 │ f: Nat -> Nat = for (x: Nat) -> * 2 x
  │                              ══ unexpected token

error: aborting due to previous error

