test/ui/test/parsing/lambda-thin-arrow.lushui
f: Nat -> Nat = for (x: Nat) -> * 2 x
